tests/baselines/reference/generatorInAmbientContext1.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext1.ts(2,5): error TS1221: Generators are not allowed in an ambient context.


==== tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext1.ts (1 errors) ====
    declare class C {
        *generator(): any;
        ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }